<resources>
    <string name="app_name">NUMAD18F-KeXuan</string>
    <string name="title_name">NUMAD18F-KeXuan</string>
    <string name="aboutButton">About</string>
    <string name="errorButton">Generate Error</string>
    <string name="dictButton">Dictionary</string>
    <string name="name">Ke Xuan</string>
    <string name="email">xuanconan@gmail.com</string>
    <string name="yearInSchool">2nd year</string>
    <string name="uniqueId">IMEI Number</string>
    <string name="closeButton">Close</string>
    <string name="submit_Button">Submit</string>
    <string name="textViewVersionCode">Version Code: 4</string>
    <string name="textViewVersionName">Version Name: 4.5</string>
    <string name="acknowledgementsButton">Acknowledgements</string>
    <string name="clearButton">Clear</string>
    <string name="gameButton">Word Game</string>
    <string name="acknowledgements">Acknowledgements</string>

    <string name="timer1">Time:</string>
    <string name="timer2">4:00</string>
    <string name="text_word">current input</string>
    <string name="text_word1">Current input:</string>
    <string name="score_1">Score:</string>
    <string name="score_0">0</string>
    <string name="submit_label">Check word</string>
    <string name="pause_button">Pause</string>
    <string name="phase2_button">Go Phase2</string>
    <string name="phase2_end">Game Over</string>
    <string name="phase2_begin">Please press Phase2!</string>
    <string name="game_name">Mario Scroggle!</string>
    <string name="start_game">Start\nGame</string>
    <string name="score_board">Score Board</string>
    <string name="leader_board">Leader Board</string>
    <string name="input_username">Your username</string>




    <string-array name="acknowledgementsList">

        <item>
            Image of Detective Conan
            \nhttp://static1.comicvine.com/uploads/scale_super/11111/111111327/3278747-dc-detective-conan-17352255-857-933.jpg
        </item>

        <item>
            How to make a beep in android?
            \nhttps://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android
        </item>

        <item>
            ListView Tutorial With Example In Android Studio
            \nhttp://abhiandroid.com/ui/listview
        </item>

        <item>
            Super Mario Bros Sound
            \nhttps://downloads.khinsider.com/game-soundtracks/album/super-mario-bros
        </item>

        <item>
            Super Mario background pic
            \nhttp://www.ilikewallpaper.net/iphone-se-wallpaper/Super-Mario/17515
        </item>

        <item>
            Super Mario background pic2
            \nhttps://www.pinterest.com/ashpodel/windows-phone-wallpapers/
        </item>

        <item>
            Hello Android, Ultimate Tic Tac Toe game
        </item>

        <item>
            English Letter Frequency
            \nhttp://pi.math.cornell.edu/~mec/2003-2004/cryptography/subs/frequencies.html
        </item>

        <item>
            NUOEL-ccs5510_mod6
        </item>

        <item>
            Android 8.0 Notification
            \nhttps://blog.csdn.net/c10WTiybQ1Ye3/article/details/79970928
        </item>



    </string-array>
</resources>
