<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mario3"
    android:minWidth="25dp"
    android:minHeight="25dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="28dp"
        android:elevation="@dimen/elevation_high"
        android:orientation="vertical"
        android:padding="@dimen/menu_padding">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/menu_text_size"
            android:textStyle="bold" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/elevation_high"
            android:orientation="horizontal"
            android:padding="@dimen/menu_padding">

            <Button
                android:id="@+id/score_board"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/leader_board"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/new_game"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/start_game"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/leader_board"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/score_board"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>